force-app/main/default/objects/DataVault_Cloud_Platform__mdt/DataVault_Cloud_Platform__mdt.object-meta.xml
<CustomObject>
    <description
  >Available cloud platforms where org records can be backed up. Add or deactivate platforms to control what appears in the Export Config UI.</description>
    <label>DataVault Cloud Platform</label>
    <pluralLabel>DataVault Cloud Platforms</pluralLabel>
</CustomObject>