force-app/main/default/objects/DataVault_Cloud_Platform__mdt/fields/Api_Value__c.field-meta.xml
<CustomField>
    <fullName>Api_Value__c</fullName>
    <description
  >API value stored in config (e.g. AWS_S3). Used for routing and validation.</description>
    <label>API Value</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>