force-app/main/default/objects/DataVault_Cloud_Platform__mdt/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <description
  >Order in which this platform appears in the picklist. Lower numbers first.</description>
    <label>Display Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>