force-app/main/default/objects/DataVault_Cloud_Platform__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >When checked, this platform appears in the Export Config picklist.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>